# MEASURMENTS-DATA

./: .gitignore  README.md  Transcripcion_Reunion_Mohamed.md  pyproject.toml  reporte_datasets_validacion.md  transcription_result.json  transcription_segments.txt
docs/: propuesta_modelos_ia.md
docs/s11_edge_methodology_report/: main.aux  main.bbl  main.blg  main.lof  main.lot  main.out  main.tex  main.toc  references.bib
docs/s11_edge_methodology_report/sections/: 00_executive_summary.tex  01_problem_framing.tex  02_dataset_abstraction.tex  03_representation_routes.tex  04_preprocessing_pipeline.tex  05_normalization.tex  06_overfitting_control.tex  07_augmentation.tex  08_algorithm_review.tex  09_evaluation_framework.tex  10_decision_workflow.tex  11_next_steps.tex
docs/s11_edge_methodology_report/tables/: algorithm_comparison.tex
docs/superpowers/specs/: 2026-06-23-s11-edge-methodology-design.md
scripts/: run_full_experiment.py
scripts/cedia/: __init__.py  cedia_config.py  check_status.py  fetch_logs.py  fetch_metrics.py  monitor_job.py  s11_experiment.slurm  slurm_train.sh  ssh_utils.py  upload_and_run.py  upload_and_run_s11.py
src/evaluation/: calibration.py  cv_orchestrator.py  experiment_logger.py  nested_cv.py
src/route_a_1d_spectral/: README.md
src/route_b_2d_image/: README.md
src/route_b_2d_image/data_rendering/: image_renderer.py
src/s11_edge_classification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
