[project]
name = "s11-edge-classification"
version = "0.1.0"
description = "Edge-oriented classification of single-port S11 measurements"
authors = [
    {name = "Mateo Gavilanes", email = "mateisaacgavilanes@gmail.com"},
    {name = "Yehudhah Kennedy Rodriguez Moran"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "torch>=2.0.0",
    "paramiko>=3.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
